# solution-agent

./: .gitignore  CHANGELOG.md  README.md  WALKTHROUGH.md
backend/: .env.example  agent.py  database.py  diagram_validator.py  ingestion.py  llm_manager.py  main.py  models.py  pyproject.toml  schemas.py  solution_agent.db.bak  test_api.py  test_llm_connection.py  test_llm_manager.py  test_main.py  vector_store.py
backend/tests/: conftest.py  test_api.py
frontend/: package-lock.json  package.json
frontend/public/: c4_concept_a_realistic.html  c4_sequence_toggles.html  c4_ux_concepts.html  mockups.html  project_settings_mockup.html
frontend/src/app/: globals.css  layout.tsx  page.tsx  smoke.test.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: AppIcon.tsx  ContextChat.tsx  Mermaid.tsx  NewProjectModal.tsx  Sidebar.tsx
frontend/src/contexts/: ProjectContext.tsx
frontend/src/lib/: api.ts
frontend/src/test/: setup.ts
